--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
     z-index: 5;
 } */
 
-.img{
+/* .img{
     width: 400px;
     height: 300px;
     position: absolute;
@@ -93,6 +93,103 @@ p{
     height: 25px;
     left: 360px;
     text-align: center;
+} */
+
+body{
+    font-family: 'Roboto', sans-serif;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(img/image3.jpg);
+    background-size: cover;
+}
+
+.container{
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.header-nav{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 43px;
+}
+
+.menu{
+    display: flex;
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+.header a{
+    font-size: 23px;
+    color: #FFFFFF;
+}
+
+.menu li{
+    margin-left: 34px;
+}
+
+.button{
+    display: block;
+    background: #9F0F0F;
+    width: 351px;
+    height: 45px;
+    text-align: center;
+    /* vertical-align: middle; */
+    line-height: 45px;
+    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.35);
+    margin: 630px auto;
+}
+
+.images{
+    padding-top: 120px;
+    
+}
+
+.images-box{
+    display: flex;
+    justify-content: space-between;
+}
+
+.images-box img{
+    height: 100%;
+}
+
+.text{
+    padding: 120px;
+    font-size: 24px;
+    font-weight: 400;
+}
+.text p{
+    text-align: center;
+}
+
+footer{
+    background-color: #7B0F15;
+    height: 93px;
+    width: 100%;
+}
+
+footer a{
+    font-size: 23px;
+    color: #FFFFFF;
+}
+
+.footer-nav{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 35px;
+}
 
